Right aligned labes, fixed html

--- a/form.css
+++ b/form.css
@@ -19,6 +19,12 @@ fieldset label {
 	font-weight: bold;
 }
 
+fieldset label.RightAligned {
+	margin-left: -10px; 
+	margin-right: 10px;
+	text-align: right;
+}
+
 fieldset select {
 	min-width: 25%;
 	margin: 0;
@@ -226,3 +232,4 @@ fieldset label.Required:after {
 	display: inline;
 	margin: 0;
 }
+
